--- a/src/sass/structure/footer/_pagefooter.scss
+++ b/src/sass/structure/footer/_pagefooter.scss
@@ -28,40 +28,8 @@
 	    padding: 20px 0;
 	}
 	
-	.socialmedia {
-	    margin-top: 1rem;
-	    margin-right: 50px;
-	    @media (min-width: $screen-sm) {
-		 margin-right: 0;
-	    }
-	    li {		
-		display: inline;
-		
-		a {
-		   
-		    width: 2rem;
-		    height: 2rem;
-		    overflow: hidden;
-		    
-		    &:before {			
-			border: 1px solid #fff;
-			box-shadow: 0px 0px 1px #fff;
-			// macht die ganze Sache etwas "runder"
-		    }
-		   
-		    
-		}
-		a:hover,
-		a:focus {
-		    &:before {
-			background: #fff;
-			color: $colorPrimaryHero;
-		    }
-    		}
-		
-		
-	    }
-	}
+	
+	
 	.footer-logo {
 	    .fau-logo-footer {
 		  fill: #fff;
@@ -82,6 +50,17 @@
 	       text-align: right;
 	       margin-top: inherit;
 	   }
+	   
+	   .svg-socialmedia {
+	       margin: 1rem 60px 0 0;
+	       @media (min-width: $screen-sm) {
+		    margin: 1rem;
+	       }
+	       ul {
+		   margin: 0;
+	       }
+	   }
+	   
        }
        
        /* Footer Navigation */
