--- a/src/sass/structure/header/_branding.scss
+++ b/src/sass/structure/header/_branding.scss
@@ -55,6 +55,8 @@
 		    display: inline-block;
 		    max-width: 240px;
 		    max-height: 65px;
+		    object-fit: contain;
+		    object-position: left;
 		}
 	    }
 	    span {
