--- a/src/sass/structure/header/_grid.scss
+++ b/src/sass/structure/header/_grid.scss
@@ -49,6 +49,10 @@
     @media (min-width: $screen-sm) {
 	padding-left:  floor(($grid-gutter-width / 2));
 	padding-right: ceil(($grid-gutter-width / 2));
+	width: $container-sm;
+    }
+     @media (min-width: $screen-md) {
+	width: $container-md;
     }
     @media (min-width: $screen-lg-min) {
 	width: $container-lg;
