grid für nomale posts und pages angepasst

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -332,3 +332,11 @@ $grid-gutter-width: $fau-gutter-width;
 
 
 $searchbackdrop-offset-top: 195px;
+
+$subnav-width-sm: 260px;
+$subnav-width-md: 275px;
+$subnav-width-lg: 290px;
+
+$sidebar-width-inline: 235px;
+$sidebar-width-portal: 33%;
+$sidebar-width-posts: 33%;
