--- a/src/sass/structure/content/_content.scss
+++ b/src/sass/structure/content/_content.scss
@@ -3,6 +3,9 @@
 /*-----------------------------------------------------------------------------------*/
 
 
+// grid in content region
+@import "grid";
+
 // all content types
 @import "global";
 
