--- a/src/sass/elements/_links.scss
+++ b/src/sass/elements/_links.scss
@@ -120,3 +120,10 @@ a {
 	display: none;
 
 }
+
+@media (prefers-reduced-motion: no-preference) {
+  :focus {
+    transition: outline-offset .25s ease;
+    outline-offset: 5px;
+  }
+}
