--- a/src/sass/plugins/_rrze-search.scss
+++ b/src/sass/plugins/_rrze-search.scss
@@ -66,3 +66,28 @@
 	white-space: normal;
     }
 }
+
+.sidebar-single .rrze_search {
+    dialog {
+	border: none;
+    }
+    form[role="search"] header {
+	flex-wrap: wrap;
+    }	
+    label {
+	min-width: inherit;
+	@include px2rem($font-size-sidebar);
+    }
+    #headsearchinput {
+	max-width: 12rem;
+	margin: 5px 0;
+	padding: 19px 25px 19px 10px;
+	line-height: 1.5rem;
+	font-size: 1rem;
+	height: 30px;
+	border: 3px solid $colorMetaBackground;
+    }
+    input[type="submit"] {
+	margin-left: -20px;
+    }
+}
