Bugfix padding header menu

--- a/src/sass/structure/header/_grid.scss
+++ b/src/sass/structure/header/_grid.scss
@@ -110,6 +110,11 @@
 	.branding {
 	    min-width: 240px;
 	}
+	.header-menu {
+	    @media (min-width: $screen-sm) {
+		padding-left: 15px;
+	    }
+	}
     }
 }
 
