--- a/src/sass/structure/_structure.scss
+++ b/src/sass/structure/_structure.scss
@@ -3,7 +3,7 @@
 /*-----------------------------------------------------------------------------------*/
 
 // Add grid extention
-@import "grid-extention";
+// @import "grid-extention";
 
 
 // Layout - Rahmen, grundlegende Struktur gesamte Website
