--- a/src/sass/plugins/_ili-fau-templates.scss
+++ b/src/sass/plugins/_ili-fau-templates.scss
@@ -3,15 +3,23 @@
   https://github.com/ilifau/ili-fau-templates
 */
 
-.page-template-template-landing-page #ilifautpl-hero {
-    padding-top: 4em;
-    
-    .page-template-template-landing-page.admin-bar & {
-	margin-top: 32px;
-    }
-}
 
 .page-template-template-landing-page #ilifautpl-hero::after {
     top: 0;
     height: 4em;
+}
+
+
+.page-template-template-landing-page  {
+    #ilifautpl-hero {
+	padding-top: 4em;
+
+	.page-template-template-landing-page.admin-bar & {
+	    margin-top: 32px;
+	}
+
+	.ilifautpl-hero-inner {
+	    max-width: 100vw;
+	} 
+    }
 }
