--- a/src/sass/structure/layout/_base.scss
+++ b/src/sass/structure/layout/_base.scss
@@ -88,11 +88,16 @@ html, body, button {
 /* START full width image */
 .outside-the-box-full-width {
 	left: 50%;
-	margin-left: calc(-#{$fau-gutter-width} / 2);
-	margin-right: calc(-#{$fau-gutter-width} / 2);
-	max-width: calc(100vw - (#{$grid-gutter-width} / 2));
 	right: 50%;
+	max-width: 100vw;
 	width: 100vw;
+	padding: 0 calc(#{$fau-gutter-width} / 2);
+	margin-left: calc(-#{$grid-gutter-width} / 2);
+	margin-right: calc(-#{$grid-gutter-width} / 2);
+		
+	
+
+	
 	@media (min-width: $screen-sm-min) {
 		margin-left: calc(-100vw / 2 + (#{$container-sm} - #{$grid-gutter-width}) / 2);
 		margin-right: calc(-100vw / 2 + (#{$container-sm} - #{$grid-gutter-width}) / 2);
@@ -125,12 +130,13 @@ html, body, button {
 		    margin-right: calc((-#{$max-width-hero} + (#{$container-md} - (#{$grid-gutter-width} / 2) )) / 2);
 	    }
 	}
+	img.aligncenter,
+	img.alignleft,
+	img.alignright,
 	img {
+	    width: 100vw;   
 	    max-width: 100vw;
-	    @media (min-width: $screen-sm-min) {
-		max-width: calc(100vw - (#{$grid-gutter-width} / 2));
-	    }
-	    margin: 0;
+	    margin: 0 -15px;
 	    padding: 0;
 	    display: inline-block;
 	}
