--- a/src/sass/structure/content/_grid.scss
+++ b/src/sass/structure/content/_grid.scss
@@ -111,7 +111,19 @@
 .inline-box {
     width: 100%;
     display: flex;
+    flex-wrap: wrap;
+    @media (min-width: $screen-sm) {
+	max-width: calc(#{$container-sm} - #{$grid-gutter-width});
+    }
+    @media (min-width: $screen-md) {
+	max-width: calc(#{$container-md} - #{$grid-gutter-width});
+    }
+    @media (min-width: $screen-lg) {
+	max-width: calc(#{$container-lg} - #{$grid-gutter-width});
+    }
 
+
+	
     .sidebar-inline {
         order: 2;
         display: block;
@@ -134,13 +146,13 @@
 	&.with-sidebar {
 	    @media (min-width: $screen-sm) {
 		padding-right: ceil(($grid-gutter-width / 2));
-		width: calc(#{$container-sm} - #{$sidebar-width-inline} - #{$grid-gutter-width} - 2px);
+		width: calc(#{$container-sm} - #{$grid-gutter-width} - #{$sidebar-width-inline} - #{$grid-gutter-width} - 2px);
 	    }
 	    @media (min-width: $screen-md) {
-		width: calc(#{$container-md} - #{$sidebar-width-inline} - #{$grid-gutter-width} - 2px);
+		width: calc(#{$container-md} - #{$grid-gutter-width} - #{$sidebar-width-inline} - #{$grid-gutter-width} - 2px);
 	    }
 	    @media (min-width: $screen-lg) {
-		width: calc(#{$container-lg} - #{$sidebar-width-inline} - #{$grid-gutter-width} - 2px);
+		width: calc(#{$container-lg} - #{$grid-gutter-width} - #{$sidebar-width-inline} - #{$grid-gutter-width} - 2px);
 	    }
 	    
 	}
@@ -190,8 +202,15 @@
 	justify-content: space-between;
 	flex-wrap: wrap;
 	width: 100%;
-
-
+	@media (min-width: $screen-sm) {
+		max-width: calc(#{$container-sm} - #{$grid-gutter-width});
+	    }
+	@media (min-width: $screen-md) {
+		max-width: calc(#{$container-md} - #{$grid-gutter-width});
+	    }
+	@media (min-width: $screen-lg) {
+		max-width: calc(#{$container-lg} - #{$grid-gutter-width});
+	}
 	.entry-content,
 	.post {
 	    order: 1;
@@ -199,7 +218,7 @@
 	    width: 100%;  
 	    padding-left:  floor(($grid-gutter-width / 2));
 	    padding-right: ceil(($grid-gutter-width / 2));
-
+	    
 	    @media (min-width: $screen-sm) {
 		  padding-left: 0;
 		  padding-right: 0;
