--- a/src/sass/structure/content/_posts.scss
+++ b/src/sass/structure/content/_posts.scss
@@ -122,20 +122,26 @@
 		    margin: 0 auto;
 		}
 		
-		 img {
+		img {
 		     max-width: 100vw;
 		     @media (min-width: $screen-sm) {
 			 max-width: 98.5%;		 
 		     }
-		 }
-		 .wp-caption-text{
+		}
+		 .wp-caption-text {
 		    width: 98.5%;		 
-		    margin-left: 15px;
+		    padding: 0 15px;
 		    text-align: left;
 		    @media (min-width: $screen-sm) {
 			text-align: center;
-			  margin-left: 0;
+			 margin-left: 0;
+			 padding: 0; 
 		    }
+		 }
+		 
+		 &.alignleft, 
+		 &.alignright {
+		    margin: 0 auto;
 		 }
 	    }
     
