--- a/src/sass/structure/widgets/_sidebar.scss
+++ b/src/sass/structure/widgets/_sidebar.scss
@@ -6,8 +6,14 @@
 /* Sidebar: Inline */
 .sidebar-inline {
 	border-top: 2px solid $colorLightest;
-	margin: 10px 0;
+        margin: 10px 0;
 	padding-top: 10px;
+        @media (min-width: $screen-sm) {
+            border-top: none;
+            padding-top: 0;
+            margin-top: 0;
+        }
+	
 	
 	.widget {
 		margin-bottom: 22px;
