--- a/src/sass/structure/content/_grid.scss
+++ b/src/sass/structure/content/_grid.scss
@@ -15,6 +15,7 @@
 .content-container {
     margin-right: auto;
     margin-left: auto;
+    margin-bottom: 15px;
     width: 100%;
 
     @media (min-width: $screen-sm) {
