Ausrichtung in outside the box

--- a/src/sass/structure/layout/_outside-the-box.scss
+++ b/src/sass/structure/layout/_outside-the-box.scss
@@ -50,11 +50,13 @@
 	    width: 50vw;
 	    text-align: right;
 	    margin: 0;
+	    float: right;
 	}
 	img.alignleft {
 	    width: 50vw;
 	    text-align: left;
 	    margin: 0;
+	     float: left;
 	}
 
  
