--- a/src/sass/mixins/_mixins.scss
+++ b/src/sass/mixins/_mixins.scss
@@ -139,8 +139,8 @@ Mixins File for Wordpress Theme FAU
 @mixin px2rem($font-size, $base-font-size: $font-size-gridbase, $line: $font-size * 1.5) {
   // font-size: $font-size + px; // für den IE8
   // line-height: ($line) + px;
-  font-size: px2rem($font-size, $base-font-size);
-  line-height: ($line / $base-font-size) + rem;
+  font-size: floor(($font-size / $base-font-size)*1000)/1000 + rem;
+  line-height: ceil(($line / $base-font-size)*1000)/1000 + rem;
 }
 
 @mixin morelink() {
