Bugfixes: - custom news mehrspalter - Safari bei verlinkten Bildern

--- a/src/sass/plugins/_rrze-elements.scss
+++ b/src/sass/plugins/_rrze-elements.scss
@@ -3,6 +3,13 @@
 /* https://github.com/RRZE-Webteam/rrze-elements
 /*-----------------------------------------------------------------------------------*/
 
+
+.rrze-elements-news .entry-content {
+    min-width: inherit;
+    max-width: inherit;
+}
+
+
 /*-----------------------------------------------------------------------------------*/
 /* Accordion
 /*-----------------------------------------------------------------------------------*/
