--- a/src/sass/elements/_links.scss
+++ b/src/sass/elements/_links.scss
@@ -141,6 +141,9 @@ main {
 	
 	
     }
+    a.media-img {
+	display: inline-block;
+    }
     a.media-img:hover, 
     a.media-img:focus {
 	    outline-style: solid;
