--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -360,4 +360,4 @@ $subnav-width-lg: 290px;
 
 $sidebar-width-inline: 235px;
 $sidebar-width-portal: 33%;
-$sidebar-width-posts: 33%;
+$sidebar-width-posts: 330px;
