--- a/src/sass/structure/content/_grid.scss
+++ b/src/sass/structure/content/_grid.scss
@@ -59,14 +59,14 @@
 	min-width: $screen-xxs;
 	flex-grow: 1;
 	 @media (min-width: $screen-sm) {
-	     max-width: calc(#{$container-sm} - #{$subnav-width-sm} - #{$grid-gutter-width});
+	     max-width: $container-sm - $subnav-width-sm - $grid-gutter-width; // calc(#{$container-sm} - #{$subnav-width-sm} - #{$grid-gutter-width});
 	     padding-left: $grid-gutter-width;
 	 }
 	 @media (min-width: $screen-md) {
-	     max-width: calc(#{$container-md} - #{$subnav-width-md} - #{$grid-gutter-width});
+	     max-width: $container-md - $subnav-width-sm - $grid-gutter-width;
 	 }
 	 @media (min-width: $screen-lg) {
-	     max-width: calc(#{$container-lg} - #{$subnav-width-lg} - #{$grid-gutter-width});
+	     max-width: $container-lg - $subnav-width-sm - $grid-gutter-width;
 	 }
     }
     
@@ -117,13 +117,7 @@
     display: flex;
     flex-wrap: wrap;
     @media (min-width: $screen-sm) {
-	max-width: calc(#{$container-sm} - #{$grid-gutter-width});
-    }
-    @media (min-width: $screen-md) {
-	max-width: calc(#{$container-md} - #{$grid-gutter-width});
-    }
-    @media (min-width: $screen-lg) {
-	max-width: calc(#{$container-lg} - #{$grid-gutter-width});
+	display: inline-block;
     }
 
 
@@ -135,8 +129,11 @@
         padding-left:  floor(($grid-gutter-width / 2));
 	padding-right: ceil(($grid-gutter-width / 2));
 	@media (min-width: $screen-sm) {
-	    width: calc(#{$sidebar-width-inline} + #{$grid-gutter-width} + 2px);
+	    width: $sidebar-width-inline + $grid-gutter-width; // calc(#{$sidebar-width-inline} + #{$grid-gutter-width} + 2px);
             padding-right: 0;
+	    float: right;
+	    margin-left: floor(($grid-gutter-width / 2));
+	    margin-bottom: floor(($grid-gutter-width / 2));
 	}
     }
     .content-inline {
@@ -153,18 +150,14 @@
 	&.with-sidebar {
 	    @media (min-width: $screen-sm) {
 		padding-right: ceil(($grid-gutter-width / 2));
-		width: calc(#{$container-sm} - #{$grid-gutter-width} - #{$sidebar-width-inline} - #{$grid-gutter-width} - 2px);
-	    }
-	    @media (min-width: $screen-md) {
-		width: calc(#{$container-md} - #{$grid-gutter-width} - #{$sidebar-width-inline} - #{$grid-gutter-width} - 2px);
-	    }
-	    @media (min-width: $screen-lg) {
-		width: calc(#{$container-lg} - #{$grid-gutter-width} - #{$sidebar-width-inline} - #{$grid-gutter-width} - 2px);
+		width: 100%;
 	    }
 	    
 	}
     }
 }
+
+
 /*-----------------------------------------------------------------------------------*/
 /* Default container in content for plugin and custom types
 /*-----------------------------------------------------------------------------------*/
@@ -211,13 +204,13 @@
 	flex-wrap: wrap;
 	width: 100%;
 	@media (min-width: $screen-sm) {
-		max-width: calc(#{$container-sm} - #{$grid-gutter-width});
+		max-width: $container-sm - $grid-gutter-width; 
 	    }
 	@media (min-width: $screen-md) {
-		max-width: calc(#{$container-md} - #{$grid-gutter-width});
+		max-width: $container-md - $grid-gutter-width;
 	    }
 	@media (min-width: $screen-lg) {
-		max-width: calc(#{$container-lg} - #{$grid-gutter-width});
+		max-width: $container-lg - $grid-gutter-width;
 	}
 	.entry-content{
 	    order: 1;
@@ -233,14 +226,14 @@
 	    }
 	    .with-sidebar & {
 		@media (min-width: $screen-sm) {
-		    max-width: calc(#{$container-sm} - #{$sidebar-width-posts} - #{$grid-gutter-width} - 2px);
+		    max-width: $container-sm - $sidebar-width-posts - $grid-gutter-width;
 		    padding-right: ceil(($grid-gutter-width / 2));
 		}
 		@media (min-width: $screen-md) {
-		    max-width: calc(#{$container-md} - #{$sidebar-width-posts} - #{$grid-gutter-width} - 2px);
+		    max-width: $container-md - $sidebar-width-posts - $grid-gutter-width;
 		}
 		@media (min-width: $screen-lg) {
-		    max-width: calc(#{$container-lg} - #{$sidebar-width-posts} - #{$grid-gutter-width} - 2px);
+		    max-width: $container-lg - $sidebar-width-posts - $grid-gutter-width;
 		}
 	    
 	    }
@@ -252,7 +245,7 @@
 	    width: 100%;
 	    @media (min-width: $screen-sm) {
 		padding-right: 0;
-		max-width: calc(#{$sidebar-width-posts} + 2px);
+		max-width: $sidebar-width-posts;
 	    }
 	}
 	
